fixed problem with horizontal scroll

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,4 @@
 .page {
-  min-width: 1280px;
   font-family: 'Inter', 'Arial', sans-serif;
   margin: 0;
   padding: 0;
@@ -10,7 +9,6 @@
 
 @media screen and (max-width: 1279px) {
   .page {
-    min-width: 1024px;
     max-width: 1279px;
   }
 }
