--- a/blocks/photo/photo.css
+++ b/blocks/photo/photo.css
@@ -12,7 +12,6 @@
 
 @media screen and (max-width: 1279px) {
   .photo {
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 14px 14px;
   }
 }
@@ -21,7 +20,7 @@
 @media screen and (max-width: 1023px) {
   .photo {
     width: calc(100% - 24px * 2);
-    grid-template-columns: repeat(auto-fill, minmax(288px, 1fr));
+    grid-template-columns: repeat(auto-fill, 352px);
     gap: 16px 16px;
   }
 }
