--- a/blocks/place/__item/place__item.css
+++ b/blocks/place/__item/place__item.css
@@ -12,8 +12,8 @@
 
 @media screen and (max-width: 1279px) {
   .place__item {
-    grid-template-columns: repeat(auto-fit, minmax(448px, 1fr));
-    gap: 48px 32px;
+    grid-template-columns: repeat(auto-fit, minmax(440px, 1fr));
+    gap: 48px 30px;
   }
 }
 
